# surge-fx

./: .gitignore  .gitmodules  CMakeLists.txt  Make-win.bat  Makefile  Makefile.lin  Makefile.mac  README.md  azure-pipelines.yml  surge-fx.jucer
scripts/: release-notes.sh  vst_jucer.sh
src/: LinuxAligned.h  SurgeFXEditor.cpp  SurgeFXEditor.h  SurgeFXProcessor.cpp  SurgeFXProcessor.h  SurgeLookAndFeel.h
